fix: Make list items align and lists slightly offset

--- a/static/css/default.css
+++ b/static/css/default.css
@@ -21,6 +21,12 @@ pre {
 }
 img {
 }
+li {
+  text-align: left;
+  margin-left: 10rem;
+  margin-right: 10rem;
+  list-style-position: outside;
+}
 #archive {
   margin-top: 5rem;
 }
